# fastapi-study

./: .env.template  .gitignore  debug.py  docker-compose.yml  environment.yml  main.py  pyproject.toml
app/: init_db.py  main.py
app/alembic/versions/: 40f21f190425_create_phone_number_table.py
app/config/: db.py
app/models/: models_request.py
app/notebooks/: seed_with_fake_data.ipynb
app/routers/: auth.py  todos.py  users.py
app/utils/: authentication.py
basics/: app.py  models.py
books_1/: app.py
books_2/: app.py  data.py  models.py  utils.py
tests/: fixtures.py  test_todos.py
tests/fixtures/: test_client.py
todo/: .env.template  app.py  config.py  create_db.py  docker-compose.yml  init_db.py  main.py
todo/models/: models_db.py  models_request.py
todo/notebooks/: seed_with_fake_data.ipynb
todo/routers/: auth.py  todos.py  users.py
todo/utils/: authentication.py
