[project]
name = "fastapi-study"
dynamic = ["version"]
authors = [
  { name = "João Gabriel Barbosa", email = "joaogcb29@gmail.com" },
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "passlib",
    "bcrypt==4.0.1",  # pinned because passlib tries to read modules that no longer exist in newer versions of bcrypt
    "python-multipart",
    "python-jose[cryiptography]",
]

[project.optional-dependencies]
dev = ["black", "isort"]

[tool.black]
line-length = 100

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.setuptools]
py-modules = []